grub2 (2.00-22) UNRELEASED; urgency=low

  * Backport from upstream:
    - On Linux, read partition start offsets from sysfs if possible
      (LP: #1237519).

 -- Colin Watson <cjwatson@debian.org>  Thu, 05 Dec 2013 14:21:51 +0000

grub2 (2.00-21) unstable; urgency=low

  [ Robert Millan ]
  * Backport from upstream:
    - Accept ZFS version 5000 (feature based).

  [ Colin Watson ]
  * Silence error message on initial installation when /etc/default/grub
    does not yet exist.
  * Add GRUB_RECOVERY_TITLE option, to allow the controversial "recovery
    mode" text to be customised (LP: #1240360).
  * Backport from upstream:
    - Revamp hidden timeout handling by adding a new timeout_style
      environment variable and a corresponding GRUB_TIMEOUT_STYLE
      configuration key for grub-mkconfig.  This controls hidden-timeout
      handling more simply than the previous arrangements, and pressing any
      hotkeys associated with menu entries during the hidden timeout will
      now boot the corresponding menu entry immediately (LP: #1178618).  As
      part of merging this, radically simplify the mess that
      quick_boot.patch had made of /etc/grub.d/30_os-prober; if it finds
      other OSes it can now just set timeout_style=menu and make sure the
      timeout is non-zero.
    - Fix build with FreeType 2.5.1.

 -- Colin Watson <cjwatson@debian.org>  Tue, 03 Dec 2013 16:53:32 +0000

grub2 (2.00-20) unstable; urgency=low

  * Backport from upstream:
    - Sort gnumach kernels in version order (closes: #725451).
  * Move packaging to git, following upstream.  Adjust Vcs-* fields.
  * Remove obsolete DM-Upload-Allowed field.
  * Merge (completely!) from Ubuntu:
    - Handle probing striped DM-RAID devices (thanks, Robert Collins;
      LP: #803658).
    - Unconditionally create grub.cfg on our EFI boot partition in Secure
      Boot mode; GRUB always needs some configuration in this case to find